Real website with weeks 1, 2 agenda

--- a/index.html
+++ b/index.html
@@ -1,13 +1,333 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <a href="https://www.figma.com/design/Hrzy5gxlJbOueNxsRVJPPt/C1I-September-8--2025?node-id=1-273&t=3KVAkI6Jz4St8NKD-1">
-        <h1>Click here for Figma file</h1>
-    </a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>C1I | Andr&eacute;s Cuervo</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans+Mono:wght@100..900&display=swap");
+    </style>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./homepage.css" />
+    <style>
+      body {
+        margin: 2% 10%;
+      }
+      table tr {
+        font-size: 18pt;
+      }
+      .expand-text {
+        font-size: 0.8em;
+        color: #666;
+      }
+    </style>
+  </head>
+  <body>
+    <section>
+      <details>
+        <summary>
+          <span class="title">Core 1: Interaction info</span
+          ><span class="expand-text"> (Click to expand)</span>
+        </summary>
+        <table>
+          <tbody>
+            <tr>
+              <td class="italicize underline">Core 1: Interaction</td>
+            </tr>
+            <tr>
+              <td>Parsons School of Design</td>
+            </tr>
+            <tr>
+              <td>Fall 2024</td>
+            </tr>
+            <tr>
+              <td>Time: Tuesdays, 9:00AM &dash; 11:40AM</td>
+            </tr>
+            <tr>
+              <td>
+                Location: Parsons 2 W 13th, <span class="bold">Room 1111</span>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Instructor: <a href="http://cwervo.com">Andr&eacute;s Cuervo</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+        <section>
+          <p>
+            Core 1: Interaction is designed to introduce students to programming
+            as a creative medium, way of making, a mode of exploring design. The
+            coursework focuses on developing a vocabulary of interaction design
+            principles which can then be applied across a range of platforms.
+            Students are encouraged to experiment with various media, tools, and
+            techniques, ultimately producing a portfolio of interactive and
+            visual projects designed for the screen. An emphasis is placed on
+            typography as it applies to a screen context, research-based problem
+            solving and a learning-through-making approach to technical skill
+            building. Historical and current interaction design precedents will
+            be discussed.
+          </p>
+          <ul>
+            <li>CRN: 2750</li>
+            <li>
+              Add/Drop Deadline:
+              <span class="bold">Monday, September 9, 2024</span>
+            </li>
+            <li>
+              Online Withdrawal Deadline:
+              <span class="bold">Sunday, November 17, 2024</span>
+            </li>
+          </ul>
+        </section>
+      </details>
+    </section>
+
+    <section>
+      <h2 id="links">Links</h2>
+      <ul>
+        <li><a href="./schedule">Class Schedule</a></li>
+        <li>
+          <a
+            href="./assets/PSAM_1028_2102_CD_Foundations_ Interaction_Cuervo_FA25.pdf"
+            >Syllabus</a
+          >
+        </li>
+        <li>
+          <a href="https://courses.newschool.edu/courses/PUCD2035">Catalog</a>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Office Hours</h2>
+      <!-- <p><a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2URfVn4dVoGoNnXA_9qbbog_dsAeu3YzdrGy4jMeL9aqAELbxIa2IUw_MDztz7gzj2t4gHVIBL">Schedule an office-30-minute-chat with me (virtual until October)</a></p> -->
+      <ul>
+        <li>
+          If you'd like to meet with me to discuss this class send me an email
+          and we can find a time to meet virtually.
+        </li>
+      </ul>
+    </section>
+
+    <section class="student-grid">
+      <h2>Student websites</h2>
+      <div class="grid-container">
+        <a
+          target="_blank"
+          href="https://chena905.github.io/c1i"
+          class="grid-item"
+          >Ariel</a
+        >
+        <a target="_blank" href="https://bet-am.github.io/c1i" class="grid-item"
+          >Betty</a
+        >
+        <a
+          target="_blank"
+          href="https://agart337.github.io/c1i"
+          class="grid-item"
+          >Tanvi</a
+        >
+        <a
+          target="_blank"
+          href="https://kangy198.github.io/c1i"
+          class="grid-item"
+          >Yisu</a
+        >
+        <a
+          target="_blank"
+          href="https://paoc456.github.io/c1i"
+          class="grid-item"
+          >Charis</a
+        >
+        <a
+          target="_blank"
+          href="https://hsuy321.github.io/c1i"
+          class="grid-item"
+          >Lucas</a
+        >
+        <a
+          target="_blank"
+          href="https://mukhs106.github.io/c1i"
+          class="grid-item"
+          >Suhani</a
+        >
+        <a target="_blank" href="https://kim038.github.io/c1i" class="grid-item"
+          >Chara</a
+        >
+        <a
+          target="_blank"
+          href="https://jlee098.github.io/c1i"
+          class="grid-item"
+          >Jihyun</a
+        >
+        <a
+          target="_blank"
+          href="https://slaterc1i.github.io/c1i"
+          class="grid-item"
+          >Olivia</a
+        >
+        <a
+          target="_blank"
+          href="https://Dair1111.github.io/c1i"
+          class="grid-item"
+          >Carina</a
+        >
+        <a
+          target="_blank"
+          href="https://heimishpark.github.io/c1i"
+          class="grid-item"
+          >Soohyun</a
+        >
+        <a
+          target="_blank"
+          href="https://li-c1i.github.io/C1i/"
+          class="grid-item"
+          >Lynn</a
+        >
+        <a
+          target="_blank"
+          href="https://xiea867.github.io/c1i"
+          class="grid-item"
+          >Angelina</a
+        >
+      </div>
+    </section>
+
+    <section>
+      <h2 id="tools">Tools</h2>
+      <h3><a href="https://github.com/">GitHub</a></h3>
+      <p>
+        We will be using GitHub to manage our code. Sign up for an account if
+        you don’t have one. Do this with your <code>newschool.edu</code> email,
+        then apply for the
+        <a href="https://education.github.com/discount_requests/application"
+          >student benefits</a
+        >. You may use this GitHub account in your career, and you can always
+        change your username (and add other email addresses) later. We’ll be
+        using GitHub for our code.
+      </p>
+      <!-- <h3><a href="https://desktop.github.com/">GitHub Desktop</a></h3>
+        <p>We will also be using GitHub Desktop to manage our code.</p> -->
+      <h3>Github VS Code Extension</h3>
+      <p>
+        Install
+        <a href="https://code.visualstudio.com/docs/sourcecontrol/github"
+          >this extension</a
+        >
+        for VS Code to make it easier to work with GitHub.
+      </p>
+    </section>
+
+    <section>
+      <h2 id="resources">Resources</h2>
+      <ul>
+        <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN</a>
+        </li>
+        <ul>
+          <li>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a>
+          </li>
+          <li>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a>
+          </li>
+          <!-- <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JS</a></li> -->
+          <li>
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Fundamentals#web_safe_fonts"
+              >List of "web safe fonts" and default fonts</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://fonts.google.com/knowledge/using_type/using_web_fonts"
+              ><span class="italic">Using Web Fonts</span> explainer from Google
+              Fonts</a
+            >
+          </li>
+          <!-- <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">MDN Web Development resources</a></li> -->
+        </ul>
+        <li id="resources-figma">Figma</li>
+        <ul>
+          <li>
+            <a
+              href="https://help.figma.com/hc/en-us/articles/360038510693-Guide-to-the-Figma-Community"
+              >Guide to the Figma Community</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.figma.com/community/ui-kits?resource_type=mixed&editor_type=all&price=all&sort_by=all_time&creators=all"
+              >Community UI Kits</a
+            >
+          </li>
+          <li>
+            <a href="https://www.figma.com/community/tag/assets"></a>Community
+            Assets (all)
+          </li>
+          <li>
+            <a
+              href="https://www.figma.com/community/visual-assets?resource_type=mixed&editor_type=all&price=all&sort_by=all_time&creators=all"
+              >Community Visual Assets</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.uiprep.com/blog/ultimate-guide-to-using-icons-in-figma"
+              >Ultimate Guide to Using Icons in Figma</a
+            >
+          </li>
+        </ul>
+        <li id="resources-p5js">P5.js</li>
+        <ul>
+          <li><a href="https://editor.p5js.org/">Editor</a></li>
+          <li><a href="https://p5js.org/examples/">Examples</a></li>
+          <li><a href="https://p5js.org/tutorials/">Tutorials</a></li>
+          <li>
+            <a href="https://p5js.org/reference/"
+              >P5.js Documentation Reference</a
+            >
+          </li>
+        </ul>
+        <li id="resources-vscode">VS Code</li>
+        <ul>
+          <li>
+            <a href="https://code.visualstudio.com/docs/introvideos/basics"
+              >VS Code video guides</a
+            >
+          </li>
+          <li>
+            <a href="https://github.dev/">Github VS Code online editor</a>
+          </li>
+          <li><a href="https://code.visualstudio.com/">VS Code</a></li>
+        </ul>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Colophon</h2>
+      <div>
+        <p>
+          This website is set in
+          <a href="https://fonts.google.com/specimen/IBM+Plex+Mono"
+            >IBM Plex Mono</a
+          >
+          and
+          <a href="https://fonts.google.com/specimen/IBM+Plex+Sans"
+            >IBM Plex Sans</a
+          >.
+        </p>
+        <p>
+          This website took heavy inspiration from
+          <a href="https://niktari.github.io/c1i-f24/">Nikki Makagiansar</a>'s
+          <span class="sans">Core 1: Interaction</span> class website and
+          <a href="http://jackieis.online">Jackie Liu</a>
+          <span class="sans">Core 2: Interaction</span> syllabus.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
