Remove student grid

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>C1I | Andr&eacute;s Cuervo</title>
+    <title>CD Foundations | Andr&eacute;s Cuervo</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans+Mono:wght@100..900&display=swap");
     </style>
@@ -112,89 +112,7 @@
       </ul>
     </section>
 
-    <section class="student-grid">
-      <h2>Student websites</h2>
-      <div class="grid-container">
-        <a
-          target="_blank"
-          href="https://chena905.github.io/c1i"
-          class="grid-item"
-          >Ariel</a
-        >
-        <a target="_blank" href="https://bet-am.github.io/c1i" class="grid-item"
-          >Betty</a
-        >
-        <a
-          target="_blank"
-          href="https://agart337.github.io/c1i"
-          class="grid-item"
-          >Tanvi</a
-        >
-        <a
-          target="_blank"
-          href="https://kangy198.github.io/c1i"
-          class="grid-item"
-          >Yisu</a
-        >
-        <a
-          target="_blank"
-          href="https://paoc456.github.io/c1i"
-          class="grid-item"
-          >Charis</a
-        >
-        <a
-          target="_blank"
-          href="https://hsuy321.github.io/c1i"
-          class="grid-item"
-          >Lucas</a
-        >
-        <a
-          target="_blank"
-          href="https://mukhs106.github.io/c1i"
-          class="grid-item"
-          >Suhani</a
-        >
-        <a target="_blank" href="https://kim038.github.io/c1i" class="grid-item"
-          >Chara</a
-        >
-        <a
-          target="_blank"
-          href="https://jlee098.github.io/c1i"
-          class="grid-item"
-          >Jihyun</a
-        >
-        <a
-          target="_blank"
-          href="https://slaterc1i.github.io/c1i"
-          class="grid-item"
-          >Olivia</a
-        >
-        <a
-          target="_blank"
-          href="https://Dair1111.github.io/c1i"
-          class="grid-item"
-          >Carina</a
-        >
-        <a
-          target="_blank"
-          href="https://heimishpark.github.io/c1i"
-          class="grid-item"
-          >Soohyun</a
-        >
-        <a
-          target="_blank"
-          href="https://li-c1i.github.io/C1i/"
-          class="grid-item"
-          >Lynn</a
-        >
-        <a
-          target="_blank"
-          href="https://xiea867.github.io/c1i"
-          class="grid-item"
-          >Angelina</a
-        >
-      </div>
-    </section>
+    <section class="student-grid"></section>
 
     <section>
       <h2 id="tools">Tools</h2>
