--- a/schedule/index.html
+++ b/schedule/index.html
@@ -21,7 +21,7 @@
           >Week 2 September 15, 2025</a
         >
       </li>
-      <li><a href="#">Week 3 September 22, 2025</a></li>
+      <li><a href="https://www.figma.com/design/B9swkO3Et4nD1T0v8PI0qe/Sept.-22--2025?node-id=1-7&t=g3nlRVUyDUWzIFmx-1">Week 3 September 22, 2025</a></li>
       <li><a href="#">Week 4 September 29, 2025</a></li>
       <li><a href="#">Week 5 October 6, 2025</a></li>
       <li><a href="#">Week 6 October 13, 2025</a></li>
