--- a/schedule/index.html
+++ b/schedule/index.html
@@ -22,7 +22,7 @@
         >
       </li>
       <li><a href="https://www.figma.com/design/B9swkO3Et4nD1T0v8PI0qe/Sept.-22--2025?node-id=1-7&t=g3nlRVUyDUWzIFmx-1">Week 3 September 22, 2025</a></li>
-      <li><a href="#">Week 4 September 29, 2025</a></li>
+      <li><a href="https://www.figma.com/design/y2onPeYLFeoecVxRYAGKn9/September-29--2025?node-id=1-2&t=Kh1kmTOZDj1f6lZQ-1">Week 4 September 29, 2025</a></li>
       <li><a href="#">Week 5 October 6, 2025</a></li>
       <li><a href="#">Week 6 October 13, 2025</a></li>
       <li><a href="#">Week 7 October 20, 2025</a></li>
