--- a/schedule/index.html
+++ b/schedule/index.html
@@ -25,7 +25,7 @@
       <li><a href="https://www.figma.com/design/y2onPeYLFeoecVxRYAGKn9/September-29--2025?node-id=1-2&t=Kh1kmTOZDj1f6lZQ-1">Week 4 September 29, 2025</a></li>
       <li><a href="https://www.figma.com/design/CY1wg8C2hlnfWusyd7ZaTF/Oct.-6--2025?node-id=1-2&t=lVumHjXqwbVBLRRs-1">Week 5 October 6, 2025</a></li>
       <li><a href="https://www.dropbox.com/scl/fi/q2swczc29f7dcswgjk56l/CD-Foundations_-Week-8-Oct.-12-2025-Designing-for-the-digital-canvas-how-big-is-a-browser_.paper?rlkey=hihe2ckdxvwbegdw9wbvwkihl&st=i6ufpv8i&dl=0">Week 6 October 13, 2025</a></li>
-      <li><a href="#">Week 7 October 20, 2025</a></li>
+      <li><a href="https://www.dropbox.com/scl/fi/iuahsj85l6lczn3ojrv7j/CD-Foundations-_-Week-7-_-October-20th.paper?rlkey=83ahznp5kvby616tt8fixbpbd&st=qo2b114p&dl=0">Week 7 October 20, 2025</a></li>
       <li><a href="#">Week 8 October 27, 2025</a></li>
       <li><a href="#">Week 9 November 3, 2025</a></li>
       <li><a href="#">Week 10 November 10, 2025</a></li>
