--- a/schedule/index.html
+++ b/schedule/index.html
@@ -27,7 +27,7 @@
       <li><a href="https://www.dropbox.com/scl/fi/q2swczc29f7dcswgjk56l/CD-Foundations_-Week-8-Oct.-12-2025-Designing-for-the-digital-canvas-how-big-is-a-browser_.paper?rlkey=hihe2ckdxvwbegdw9wbvwkihl&st=i6ufpv8i&dl=0">Week 6 October 13, 2025</a></li>
       <li><a href="https://www.dropbox.com/scl/fi/iuahsj85l6lczn3ojrv7j/CD-Foundations-_-Week-7-_-October-20th.paper?rlkey=83ahznp5kvby616tt8fixbpbd&st=qo2b114p&dl=0">Week 7 October 20, 2025</a></li>
       <li><a href="https://www.dropbox.com/scl/fi/s5xhebhrglwsi5eqs9bzn/CD-Foundations-_-Week-9-_-October-27.paper?rlkey=nv4jz82356ibdwu5rahbccaqq&st=ne1y6um6&dl=0">Week 8 October 27, 2025</a></li>
-      <li><a href="#">Week 9 November 3, 2025</a></li>
+      <li><a href="https://www.dropbox.com/scl/fi/xjp6ay3q72y2kwzhow60q/CD-Foundations-_-Week-9-_-November-3.paper?rlkey=mgiouavmixyfdjj144kjgyou4&st=v7gank58&dl=0">Week 9 November 3, 2025</a></li>
       <li><a href="#">Week 10 November 10, 2025</a></li>
       <li><a href="#">Week 11 November 17, 2025</a></li>
       <li><a href="#">Week 12 November 24, 2025</a></li>
