--- a/schedule/index.html
+++ b/schedule/index.html
@@ -30,7 +30,7 @@
       <li><a href="https://www.dropbox.com/scl/fi/xjp6ay3q72y2kwzhow60q/CD-Foundations-_-Week-9-_-November-3.paper?rlkey=mgiouavmixyfdjj144kjgyou4&st=v7gank58&dl=0">Week 9 November 3, 2025</a></li>
       <li><a href="https://www.dropbox.com/scl/fi/5j9vlhcl56uer2isfkb36/CD-Foundations-_-Week-10-_-Nov.-11.paper?rlkey=7c6hu0vkck3jexjz2i5d9jt5q&st=4xh944u0&dl=0">Week 10 November 10, 2025</a></li>
       <li><a href="https://www.dropbox.com/scl/fi/pe0rvu4efax2kt9xcsulc/CD-Foundations-_-Week-11-_-Nov.-17.paper?rlkey=uvajjh6tj6zsc56h3tcfzcxlh&st=z79561ra&dl=0">Week 11 November 17, 2025</a></li>
-      <li><a href="#">Week 12 November 24, 2025</a></li>
+      <li><a href="https://www.dropbox.com/scl/fi/45bx88w5np6p22ryk3ee0/CD-Foundations-_-Week-12-_-November-24.paper?rlkey=i63y1l6zafrnw7356spc8lwd5&st=5we9hz1w&dl=0">Week 12 November 24, 2025</a></li>
       <li><a href="#">Week 13 December 1, 2025</a></li>
       <li><a href="#">Week 14 December 8, 2025</a></li>
       <li><a href="#">Week 15 December 15, 2025</a></li>
