--- a/schedule/index.html
+++ b/schedule/index.html
@@ -32,7 +32,7 @@
       <li><a href="https://www.dropbox.com/scl/fi/pe0rvu4efax2kt9xcsulc/CD-Foundations-_-Week-11-_-Nov.-17.paper?rlkey=uvajjh6tj6zsc56h3tcfzcxlh&st=z79561ra&dl=0">Week 11 November 17, 2025</a></li>
       <li><a href="https://www.dropbox.com/scl/fi/45bx88w5np6p22ryk3ee0/CD-Foundations-_-Week-12-_-November-24.paper?rlkey=i63y1l6zafrnw7356spc8lwd5&st=5we9hz1w&dl=0">Week 12 November 24, 2025</a></li>
       <li><a href="https://www.dropbox.com/scl/fi/b6lyojvi997wvd5ctj4qk/CD-Foundations-_-Fall-2025-_-December-1.paper?rlkey=e9gjqohiwv3sjsl03zfsvasle&st=ksofj0yl&dl=0">Week 13 December 1, 2025</a></li>
-      <li><a href="#">Week 14 December 8, 2025</a></li>
+      <li><a href="https://www.dropbox.com/scl/fi/cttodoadejr9fan807f74/CD-Foundations-_-December-8-2025-_-Week-14.paper?rlkey=crbk2evtk2pkjoggahpk0w5em&st=7b9az6rj&dl=0">Week 14 December 8, 2025</a></li>
       <li><a href="#">Week 15 December 15, 2025</a></li>
     </ol>
   </body>
